examples/negatives/array_negative.bl
//array index assignment is not supported
char_arr[0] = "A";
print(char_arr);